--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .square {
   background: white;
   border: 1px solid gray;
+  border-radius: 10px;
   float: left;
   margin-right: 1px;
   margin-top: 1px;
@@ -15,4 +16,25 @@
 
 .square:focus {
   outline: none;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.game {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
 }
