--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,10 @@
   flex-direction: row;
   margin: 0 auto;
 }
+
+.win-banner {
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
+  margin: 20px 0;
+}
